# defibrillator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  HEALTH.md  LICENSE  README.md  TASKS.md  pyproject.toml
.github/workflows/: detect_archived.yml  health_dashboard.yml  lint.yml  stale_report.yml  sync_ci_status.yml  upstream_divergence.yml  validate.yml
defibrillator/: __init__.py  dates.py  github_api.py  github_url.py  repo_catalog.py  staleness.py  upstream.py
info/: example.md
repos/: example.yaml
scripts/: check_base_image.py  check_runtime_compatibility.py  detect_archived.py  fork_repo.py  generate_badges.py  generate_changelog.py  generate_dependabot.py  generate_digest.py  generate_feed.py  ghcr_cleanup.py  health_dashboard.py  monitor_artifacts.py  monitor_upstream.py  security_scan.py  stale_report.py  sync_ci_status.py  upstream_divergence_report.py  validate.py  validate_licenses.py
templates/: repo.yaml.template
tests/: test_staleness.py
